--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,6 +12,12 @@
     
   }
 }
+.navigation{
+@media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
  .navigation__link,
  .contacts__mail,
  .contacts__tel {
@@ -37,6 +43,9 @@
     margin-left: auto;
       display: flex;
       gap: 30px;
+      @media screen and (max-width: 767px) {
+          display: none;
+        }
   @media screen and (max-width: 1199px) {
     flex-direction: column;
     gap: 10px;
