--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,12 @@ body {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+}
+
 .navigation__link,
 .contacts__mail,
 .contacts__tel {
@@ -126,6 +132,11 @@ body {
   margin-left: auto;
   display: flex;
   gap: 30px;
+}
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
 }
 @media screen and (max-width: 1199px) {
   .contacts {
@@ -596,7 +607,11 @@ ul {
 
 .logo {
   display: flex;
-  justify-content: center;
+}
+@media screen and (max-width: 1199px) {
+  .logo {
+    justify-content: center;
+  }
 }
 
 .logo__studio {
@@ -687,7 +702,11 @@ ul {
   margin-bottom: 20px;
   color: #ffffff;
   display: flex;
-  justify-content: center;
+}
+@media screen and (max-width: 1199px) {
+  .accession__text {
+    justify-content: center;
+  }
 }
 
 .networks__link {
@@ -814,15 +833,37 @@ ul {
 }
 
 .main-content {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .main-content {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter {
-  margin-bottom: 50px;
+  width: 100%;
+  margin-bottom: 40px;
   display: flex;
   gap: 8px;
-  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .filter {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-button {
@@ -836,7 +877,7 @@ ul {
   background: #f5f4fa;
   border-radius: 4px;
   display: block;
-  min-width: 73px;
+  min-width: 100%;
   text-align: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -845,6 +886,11 @@ ul {
   background-color: var(--accent-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+@media screen and (max-width: 767px) {
+  .filter-button {
+    width: calc((100% - 16px) / 3);
+  }
 }
 
 .blocks {
@@ -872,15 +918,28 @@ ul {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   background: #ffffff;
+  flex-grow: 1;
 }
 
 .block-list {
-  width: calc((100% - 60px) / 3);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .block-list:hover, .block-list:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .block-list {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .block-list {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .block-list-wrap {
@@ -925,9 +984,9 @@ ul {
 }
 
 .modal {
-  width: 528px;
+  width: 100%;
   padding: 40px;
-  min-height: 581px;
+  min-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -936,6 +995,18 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    min-height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__button__close {
@@ -1021,14 +1092,20 @@ ul {
 }
 
 .check__text {
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: #757575;
 }
 .check__text {
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .check__text {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 .check__place {
@@ -1042,8 +1119,19 @@ ul {
   align-items: center;
 }
 
-.check-wrap {
-  margin-left: 12px;
+.wrap-text-mod {
+  display: flex;
+}
+@media screen and (max-width: 479px) {
+  .wrap-text-mod {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .check-wrap {
+    margin-left: 12px;
+  }
 }
 
 .check__link {
