--- a/sass/backdrop-modal/_backdrop-modal.scss
+++ b/sass/backdrop-modal/_backdrop-modal.scss
@@ -13,9 +13,9 @@
 }
 
 .modal {
-  width: 528px;
+  width: 100%;
   padding: 40px;
-  min-height: 581px;
+  min-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -25,6 +25,14 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 480px) {
+      width: 450px;
+      min-height: 609px;
+    }
+  @media screen and (min-width: 1200px) {
+      width: 528px;
+      min-height: 581px;
+    }
 }
 
 .modal__button__close {
@@ -110,14 +118,19 @@
 }
 
 .check__text {
-  font-size: 14px;
-  line-height: calc(24 / 14);
+  font-size: 12px;
+  line-height: calc(14 / 12);
   letter-spacing: 0.03em;
   color: #757575;
   & {
     display: flex;
     align-items: center;
   } 
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+        line-height: calc(24 / 14);
+        
+    }
 }
 .check__place {
   width: 16px;
@@ -129,9 +142,18 @@
   justify-content: center;
   align-items: center;
 }
+.wrap-text-mod{
+display: flex;
+@media screen and (max-width: 479px) {
+    flex-wrap: wrap;
+  }
+
+}
 
 .check-wrap {
-  margin-left: 12px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+    }
 }
 
 .check__link {
