--- a/sass/portfolio/_button-filter.scss
+++ b/sass/portfolio/_button-filter.scss
@@ -1,13 +1,27 @@
 .main-content {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+     padding-bottom: 94px;
+    }
 }
 
 .filter {
-  margin-bottom: 50px;
+  width: 100%;
+  margin-bottom: 40px;
   display: flex;
   gap: 8px;
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+    }
+  @media screen and (max-width: 767px) {
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
 }
 .filter-button {
   font-family: "Roboto";
@@ -20,7 +34,7 @@
   background: #f5f4fa;
   border-radius: 4px;
   display: block;
-  min-width: 73px;
+  min-width: 100%;
   text-align: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -33,4 +47,8 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+  
+@media screen and (max-width: 767px) {
+  width: calc((100% - 16px)/3);
+}
 }
