--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ img {
 body {
   font-family: "Roboto", "Open Sans", sans-serif;
   color: #212121;
+  position: relative;
 }
 
 .header {
@@ -232,6 +233,133 @@ ul {
 
 .navigation__list .navigation__link.current {
   color: #2196f3;
+}
+
+.menu-open {
+  margin-left: auto;
+  padding: 0px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-open:hover, .menu-open:focus {
+  fill: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-open {
+    display: none;
+  }
+}
+
+.mod-close {
+  display: block;
+  margin-left: auto;
+  padding: 0px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mod-close:hover, .mod-close:focus {
+  fill: var(--accent-color);
+}
+
+.mob-menu {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 2;
+  padding-top: 10px;
+  padding-bottom: 48px;
+  background: #FFFFFF;
+  top: 0;
+}
+.mob-menu > .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mob-nav-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.nav-mob {
+  margin-left: 25px;
+}
+
+.mob-nav-link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-nav-link:hover, .mob-nav-link:focus {
+  color: var(--accent-color);
+}
+
+.mob-contacts {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 64px;
+}
+
+.cont-tel {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #2196F3;
+}
+@media screen and (min-width: 480px) {
+  .cont-tel {
+    font-size: 34px;
+    line-height: 1.1764705882;
+  }
+}
+
+.cont-mail {
+  margin-top: 32px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.menu-soc-mob {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mob-cont-soc {
+  margin-left: 25px;
+}
+
+.soc-mob {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #2196F3;
+}
+
+.bord:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
+  padding-right: 10px;
 }
 
 .title {
