--- a/sass/components/_main-titel.scss
+++ b/sass/components/_main-titel.scss
@@ -1,31 +1,79 @@
 .title {
   background-color: #2f303a;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/Img_main.jpg);
+    url(../images/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-mob-2x.jpg);
+  }
   width: 100%;
   margin: 0 auto;
 
+    @media screen and (min-width: 480px) {
+      max-width: 480px;
+    }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-tab.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-bg-tab-2x.jpg);
+    }
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Img_main.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-bg-desk-2x.jpg);
+    }
+    max-width: 1600px;
+  }
 }
 .title-item {
   font-family: "Roboto";
   font-weight: 900;
   font-size: 26px;
-    line-height: calc(42/26);
+  line-height: calc(42 / 26);
   color: #ffffff;
   @media screen and (min-width: 1200px) {
-      font-size: 44px;
-        line-height: calc(60 / 44);
-    }
+    font-size: 44px;
+    line-height: calc(60 / 44);
+  }
 }
 .title-btn {
   border-radius: 4px;
@@ -45,8 +93,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
   @media screen and (min-width: 1200px) {
-      padding-top: 94px;
-    }
+    padding-top: 94px;
+  }
 }
 .description-list {
   display: flex;
@@ -58,11 +106,11 @@
   // width: 270px;
   width: 100%;
   @media screen and (min-width: 768px) {
-      width: calc((100% - 30px)/2);
-    }
-        @media screen and (min-width: 1200px) {
-          width: calc((100% - 90px)/4);
-        }
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .description-title {
@@ -70,12 +118,11 @@
   line-height: 1.33;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
- text-align: center;
+  text-align: center;
   color: var(--title-color);
   @media screen and (min-width: 768px) {
-      text-align: left;
-    }
-  
+    text-align: left;
+  }
 }
 
 .description-text {
